--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
+    "formik": "^2.2.9",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.62.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,8 +43,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.38.0",
-    "eslint-plugin-react": "^7.32.2",
     "prettier": "2.8.7"
   }
 }
